--- a/css/code.css
+++ b/css/code.css
@@ -130,21 +130,21 @@ h1 {
 }
 
 .social-icons .social-icon.linkedin {
-    background: url('/Users/Steph/Sites/sadgirlnyc.github.io/public/linkedin.png');
+    background: url('/public/linkedin.png');
     background-size: contain;
 }
 
 .social-icon.linkedin:hover {
-    background: url('/Users/Steph/Sites/sadgirlnyc.github.io/public/linkedin-white.png');
+    background: url('/public/linkedin-white.png');
     background-size: contain;
 }
 
 .social-icon.github {
-    background: url('/Users/Steph/Sites/sadgirlnyc.github.io/public/github.png');
+    background: url('/public/github.png');
     background-size: contain;
 }
 
 .social-icon.github:hover {
-    background: url('/Users/Steph/Sites/sadgirlnyc.github.io/public/github-white.png');
+    background: url('/public/github-white.png');
     background-size: contain;
 }
