--- a/30-projects/random_80_lyrics/css/main.css
+++ b/30-projects/random_80_lyrics/css/main.css
@@ -27,7 +27,7 @@ a {
 }
 
 #lyricDisplay {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0 auto;
 	width: 75%;
 	height: 75px;
@@ -35,6 +35,19 @@ a {
 	background: #FFF;
   color: #000;
   padding: 25px 10px 15px 10px;
+}
+
+@media screen and (max-width: 375px){
+  #lyricDisplay {
+    font-family: 'Poppins', sans-serif;
+    margin: 0 auto;
+  	width: 75%;
+  	height: 100%;
+    border-radius: 25px;
+  	background: #FFF;
+    color: #000;
+    padding: 10px 10px 10px 10px;
+  }
 }
 
 button {
